# yashigani

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  autogen.sh  config.status  configure  configure.ac  fanotify.c  list_bin  list_lib  yashiganid.conf
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
buildroot/package/yashigani/: Config.in  file.hash  yashigani.mk
src/: Makefile  Makefile.am  Makefile.in  cfg.c  cfg.h  common.c  common.h  init.c  init.h  line_data.c  line_data.h  load_data.c  load_data.h  main.c  main.h  test.c  yashigani.c  yashigani_old.c
src/.deps/: main.Po  yashigani.Po
tests/: sig_bin_all  sig_sbin  test.c  z.sh  zzz.sh
utils/: get_hash_for_list.c  utils.sh
white-list/: zzz.sh
white-list/bin-files/: list_bin  list_usr_bin  list_usr_bin_sbin  list_usr_bin_sbin_complete
white-list/library-files/: list_lib  list_lib_complete  list_usr_lib64  usr_bin  usr_bin_ls  usr_bin_sed
white-list/unused/: bin_files  sig_bin  sig_bin_all_save  sig_usr_bin  sig_usr_sbin
